--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -11,22 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Grant execute permission for gradlew
+      - name: Grant execute permission to Gradle
         run: chmod +x ./gradlew
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug
+      - name: Build debug APK
+        run: ./gradlew :app:assembleDebug
 
-      - name: Upload APK
+      - name: List all APKs (debugging)
+        run: find . -name "*.apk"
+
+      - name: Upload debug APK
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
