--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -2,8 +2,6 @@ name: Build Android APK
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
   build:
@@ -12,10 +10,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
@@ -24,13 +22,18 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build debug APK
-        run: ./gradlew :app:assembleDebug
+        run: ./gradlew assembleDebug
 
       - name: List all APKs (debugging)
         run: find . -name "*.apk"
 
+      - name: Show directory structure for debugging
+        run: |
+          echo "=== FULL DIRECTORY STRUCTURE ==="
+          find . -type f
+
       - name: Upload debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug
+          name: barcode-photo-app-debug
           path: app/build/outputs/apk/debug/app-debug.apk
